fix for csv import where last field has " SERVER-682